--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: TinyURL_production
-  username: TinyURL
-  password: <%= ENV['TINYURL_DATABASE_PASSWORD'] %>
+  url: <%= ENV['CLEARDB_DATABASE_URL'] %>
