--- a/config/database.yml
+++ b/config/database.yml
@@ -48,4 +48,6 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
+  adapter: mysql2
+  encoding: utf8
   url: <%= ENV['CLEARDB_DATABASE_URL'] %>
